# RL-Computer-Vision-Tasks

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
configs/: cifar10_classification.yaml  default.yaml  mnist_classification.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py
src/algorithms/: __init__.py  dqn_variants.py
src/environments/: __init__.py  vision_env.py
src/utils/: __init__.py  training.py
tests/: test_rl_vision.py
